--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
-    </body>
+<html lang="en/lt">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>{% block title %}Public Holidays{% endblock %}</title>
+  {% block stylesheets %}
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  {% endblock %}
+</head>
+<body>
+{% block body %}
+  <div class="page-wrapper">
+    <div class="container-fluid">
+      <header class="page-header">
+        <div class="row no-gutters justify-content-center">
+          <h2>Public country holidays</h2>
+        </div>
+      </header>
+      <div class="content container">
+        {% block content %}
+
+        {% endblock %}
+      </div>
+      <footer class="page-footer fixed-bottom">
+        <div class="row no-gutters pl-5">
+          <em>Training assignment for a PHP developer</em>
+        </div>
+      </footer>
+    </div>
+  </div>
+{% endblock %}
+{% block javascripts %}
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+          integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+          crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="{{ asset('css/app.css') }}">
+{% endblock %}
+</body>
 </html>
