js region select

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,7 +3,7 @@
 
 {% block content %}
   <div class="row">
-    <form method="post" action="/holidays">
+    <form method="post" class="holidays" action="/holidays">
       <div class="form-group">
         <label for="year-choice">Choose year:</label>
         <select class="form-control" list="years" id="year-choice" name="year-choice">
