--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -33,10 +33,12 @@
   </div>
 {% endblock %}
 {% block javascripts %}
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
           integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
           crossorigin="anonymous"></script>
   <link rel="stylesheet" href="{{ asset('css/app.css') }}">
+  <script src="{{ asset('app.js') }}"></script>
 {% endblock %}
 </body>
 </html>
