--- a/assets/sass/components/_holidays.scss
+++ b/assets/sass/components/_holidays.scss
@@ -5,6 +5,7 @@ body {
 }
 
 .page-wrapper {
+    position: relative;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
@@ -15,10 +16,33 @@ body {
 .page-header {
     border-bottom: 1px solid $color__type-paper;
     box-shadow: 3px 5px 18px $color__dark-vanilla;
+}
 
+.content {
+    .violations {
+        margin: 2rem 0 .5rem 0;
+    }
+    padding-bottom: 2.5rem;
+    .search-info {
+        padding: 0 1rem;
+        border-bottom: 1px solid $color__dark-vanilla;
+        div {
+            color: #444444;
+        }
+    }
+    .card-header {
+        padding: .25rem .75rem;
+    }
+    .card-body {
+        padding: .75rem;
+    }
 }
 
 .page-footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;
     border-top: 1px solid $color__ink;
 }
 
