--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,6 +2,7 @@ body {
   background: #F4F4EF; }
 
 .page-wrapper {
+  position: relative;
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
@@ -12,7 +13,25 @@ body {
   border-bottom: 1px solid #EFEFEF;
   box-shadow: 3px 5px 18px #D8C3A5; }
 
+.content {
+  padding-bottom: 2.5rem; }
+  .content .violations {
+    margin: 2rem 0 .5rem 0; }
+  .content .search-info {
+    padding: 0 1rem;
+    border-bottom: 1px solid #D8C3A5; }
+    .content .search-info div {
+      color: #444444; }
+  .content .card-header {
+    padding: .25rem .75rem; }
+  .content .card-body {
+    padding: .75rem; }
+
 .page-footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
   border-top: 1px solid #20232A; }
 
 .container-fluid {
