title link sends back to index js bug fix - make region-choice required before toggling d-none

--- a/assets/sass/components/_holidays.scss
+++ b/assets/sass/components/_holidays.scss
@@ -1,7 +1,16 @@
 @import "../variables/colors";
 // Colorings
 body {
+    color: $color__ink;
     background: $color__paper;
+}
+
+a {
+    color: $color__ink;
+    &:hover {
+        color: $color__ink;
+        text-decoration: none;
+    }
 }
 
 .page-wrapper {
