--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,6 +8,7 @@
   {% block stylesheets %}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ asset('css/app.css') }}">
   {% endblock %}
 </head>
 <body>
@@ -16,7 +17,7 @@
     <div class="container-fluid">
       <header class="page-header">
         <div class="row w-100 no-gutters justify-content-center py-4">
-          <h2>Public country holidays {%  if country is defined %} in {{ country }}{% endif %}</h2>
+          <a href="/"><h2>Public country holidays {%  if country is defined %} in {{ country }}{% endif %}</a></h2>
           {% if todayType is defined %}
             <div class="row w-100 justify-content-center">
               <p>Today, {{ "now"|date("m-d-Y") }} is a {{ todayType }} </p>
@@ -42,7 +43,6 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
           integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
           crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="{{ asset('css/app.css') }}">
   <script src="{{ asset('app.js') }}"></script>
 {% endblock %}
 </body>
