--- a/assets/sass/components/_holidays.scss
+++ b/assets/sass/components/_holidays.scss
@@ -28,9 +28,9 @@ a {
 }
 
 .content {
-    margin: 0 1rem;
+    margin: 1rem 1rem 0;
     @media (min-width: 576px) {
-        margin: 0 auto;
+        margin: 1rem auto 0;
     }
     .violations {
         margin: 2rem 0 .5rem 0;
