--- a/templates/holidays/holidays.html.twig
+++ b/templates/holidays/holidays.html.twig
@@ -8,7 +8,8 @@
       <div>Country: <em>{{ country }}</em></div>
       <div>{% if region is not empty %} Region: <em>{{ region }}</em>{% endif %}</div>
       <div>Holiday Count: <em>{{ holidayCount }} public holidays</em></div>
-      <div>Maximum non work days in a row from today: <em>{{ maxNonWorkdaysInARow }} days</em></div>
+      <div>Maximum non work days in a row: <em>{{ maxNonWorkdaysInARow }} days*</em></div>
+      <small class="form-text text-muted">*Will still be in year {{ year }}</small>
     </div>
     <h5>Search results:</h5>
     {% for key, month in holidays %}
